add folder branch

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -137,6 +137,13 @@
                 <data android:mimeType="vnd.android.cursor.dir/album"/>
             </intent-filter>
         </activity>
+        <activity android:name="com.android.music.FoldersBrowserActivity" android:exported="false" >
+            <intent-filter>
+                <action android:name="android.intent.action.PICK" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="vnd.android.cursor.dir/folder"/>
+            </intent-filter>
+        </activity>
         <activity android:name="com.android.music.NowPlayingActivity" android:exported="false" >
             <intent-filter>
                 <action android:name="android.intent.action.PICK" />
@@ -273,5 +280,9 @@
             </intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/appwidget_info" />
         </receiver>
+        <provider android:name="com.android.music.FoldersProvider"  
+            android:authorities="com.george.folders"  
+            android:multiprocess="false">  
+        </provider>  
     </application>
 </manifest>
